# devops-dashboard

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  renovate.yml  security.yml
src/api/: main.py
src/collectors/: github_collector.py
src/dashboard/: index.html
tests/: test_api.py  test_collector.py
